:recyle: refactor: 예외 메시지를 enum Exception으로 분리