@@ -2,30 +2,22 @@ package racingcar.view;
 
 import camp.nextstep.edu.missionutils.Console;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import racingcar.model.Car;
+import util.Exception;
 
 public final class InputView {
 
     public static List<Car> getCarNames() {
         OutputView.displayInitCarNames();
         String input = Console.readLine();
-        validateInputCharacters(input);
-        List<Car> cars = parseCarNames(input);
-        validateCarNameNotEmpty(cars);
-        validateCarNameLengths(cars);
-        validateCarListSize(cars);
-        return cars;
+        return parseCarNames(input);
     }
 
     public static int getNumberOfAttempts() {
         OutputView.displayInitNumberOfAttempts();
         String input = Console.readLine();
-        validateInputCharacters(input);
-        int numberOfAttempts = parseNumberOfAttempts(input);
-        validateNumberOfAttempts(numberOfAttempts);
-        return numberOfAttempts;
+        return parseNumberOfAttempts(input);
     }
 
     /**
@@ -33,9 +25,14 @@ public final class InputView {
      * @return 쉽표(, )를 기준으로 구분하여 앞뒤 공백 제거 후 자동차 이름 리스트 반환
      */
     private static List<Car> parseCarNames(String input) {
-        return Stream.of(input.split(","))
+        validateInputCharacters(input);
+        List<Car> cars = Stream.of(input.split(","))
                 .map(name -> new Car(name.strip(), 0))
-                .collect(Collectors.toList());
+                .toList();
+        validateCarNameNotEmpty(cars);
+        validateCarNameLengths(cars);
+        validateCarListSize(cars);
+        return cars;
     }
 
     /**
@@ -44,7 +41,7 @@ public final class InputView {
     private static void validateCarNameNotEmpty(List<Car> cars) {
         for (Car car : cars) {
             if (car.getName().isBlank()) {
-                throw new IllegalArgumentException("자동차 이름을 입력하세요.");
+                throw new IllegalArgumentException(Exception.CAR_NAME_NOT_EMPTY.getMessage());
             }
         }
     }
@@ -52,28 +49,32 @@ public final class InputView {
     private static void validateCarNameLengths(List<Car> cars) {
         for (Car car : cars) {
             if (car.getName().length() > 5) {
-                throw new IllegalArgumentException("자동차 이름은 5자 이하만 가능합니다.");
+                throw new IllegalArgumentException(Exception.CAR_NAME_TOO_LONG.getMessage());
             }
         }
     }
 
     private static void validateCarListSize(List<Car> cars) {
         if (cars.size() < 2) {
-            throw new IllegalArgumentException("자동차가 2대 이상이어야 합니다.");
+            throw new IllegalArgumentException(Exception.CAR_LIST_SIZE_TOO_LITTLE.getMessage());
         }
     }
 
     private static int parseNumberOfAttempts(String input) {
+        validateInputCharacters(input);
+        int numberOfAttempts;
         try {
-            return Integer.parseInt(input);
+            numberOfAttempts = Integer.parseInt(input);
         } catch (NumberFormatException e) {
-            throw new IllegalArgumentException("올바른 숫자를 입력하세요.");
+            throw new IllegalArgumentException(Exception.INVALID_NUMBER_FORMAT.getMessage());
         }
+        validateNumberOfAttempts(numberOfAttempts);
+        return numberOfAttempts;
     }
 
     private static void validateNumberOfAttempts(int numberOfAttempts) {
         if (numberOfAttempts <= 0) {
-            throw new IllegalArgumentException("시도 횟수는 1 이상이어야 합니다.");
+            throw new IllegalArgumentException(Exception.NUMBER_OF_ATTEMPT_TOO_LITTLE.getMessage());
         }
     }
 
@@ -82,7 +83,7 @@ public final class InputView {
      */
     private static void validateInputCharacters(String input) {
         if (!input.matches("^[a-zA-Z0-9,\\s가-힣ㄱ-ㅎㅏ-ㅣ]*$")) {
-            throw new IllegalArgumentException("입력은 영문자, 한글, 숫자, 빈 칸, 또는 쉼표(,)만 가능합니다.");
+            throw new IllegalArgumentException(Exception.INVALID_CHARACTER_FORMAT.getMessage());
         }
     }
 }
